--- a/14.html
+++ b/14.html
@@ -41,7 +41,7 @@
       window.Telegram.WebApp.MainButton.color = "#10b982"
       const page = document.querySelector('.Random');
           const links = ['1.html', '2.html', '3.html', '4.html', '5.html', 
-                       '6.html', '7.html', '8.html', '9.html', '10.html', 
+                       '6.html', '8.html', '9.html', '10.html', 
                        '11.html', '12.html', '13.html', '15.html'];
           
             window.Telegram.WebApp.onEvent("mainButtonClicked", () => {
